using header as npm package

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "manifest.json",
     "icon.svg",
     "index.html",
+    "node_modules/webview-tile-header/WebViewTileHeader.js",
     "css/**/*",
     "fonts/**/",
     "img/**/",
@@ -26,5 +27,8 @@
     "gulp-sass": "^2.2.0",
     "gulp-zip": "^3.2.0",
     "rimraf": "^2.6.1"
+  },
+  "dependencies": {
+    "webview-tile-header": "https://github.com/moduware/webview-tile-header"
   }
 }
